Fixed circle rendering incorrectly at small window sizes, and safari div too small at small window sizes

--- a/dcc-portal-ui/src/main/js/app/styles/styles.css
+++ b/dcc-portal-ui/src/main/js/app/styles/styles.css
@@ -5726,6 +5726,7 @@ td {
   -webkit-order: 2;
   order: 2;
   margin-right: 20px;
+  min-width: 130px;
 }
 /* line 115, ../vendor/styles/bamiobio/site.scss */
 #bam-statistics #percents {
@@ -6079,8 +6080,8 @@ td {
   }
   /* line 414, ../vendor/styles/bamiobio/site.scss */
   #bam-statistics #percents .percent svg {
-    width: 100%;
-    height: 80px;
+    width: 80%;
+    height: 15rem;
   }
   /* line 418, ../vendor/styles/bamiobio/site.scss */
   #bam-statistics .logos {
@@ -6092,8 +6093,15 @@ td {
     color: #505050;
   }
 }
+@media screen and (max-width: 508px) {
+  /* line 428, ../vendor/styles/bamiobio/site.scss */
+  #bam-statistics #percents .percent svg {
+    width: 50%;
+    height: 15rem;
+  }
+}
 
-/* line 429, ../vendor/styles/bamiobio/site.scss */
+/* line 435, ../vendor/styles/bamiobio/site.scss */
 .iobio-tooltip {
   position: absolute;
   text-align: center;
